[1.3.6-prepare][K8s] Fix the wrong memory and always Runtime.getRuntime().availableProcessors()=1 in docker/k8s